# ServerClientLib

./: .gitignore  CMakeLists.txt  Makefile  README.md  ServerClientLib.cmake  cmake_install.cmake  default_values.cmake
include/: Client.hpp  Connection.hpp  Message.hpp  Responce.hpp  Server.hpp
references/: debugKit.cmake
scripts/: build.sh  clear.sh  clearLogs.sh  launch.sh  startClient.sh
src/: Client.cpp  Connection.cpp  Message.cpp  Responce.cpp  Server.cpp  client_main.cpp  server_main.cpp
src/Client/: Client.cpp  Client.hpp
src/Connection/: Connection.cpp  Connection.hpp
src/Exceptions/: BindException.cpp  BindException.hpp  ClientException.cpp  ClientException.hpp  ConnectionException.cpp  ConnectionException.hpp  ConnectionNotEstablishedException.cpp  ConnectionNotEstablishedException.hpp  DisconnectionException.cpp  DisconnectionException.hpp  Exception.cpp  Exception.hpp  HostException.cpp  HostException.hpp  ListenException.cpp  ListenException.hpp  MessageSendingException.cpp  MessageSendingException.hpp  NotDisconnectedException.cpp  NotDisconnectedException.hpp  ServerException.cpp  ServerException.hpp  SocketOpeningException.cpp  SocketOpeningException.hpp  TimeOutException.cpp  TimeOutException.hpp
src/Message/: Message.cpp  Message.hpp
src/Responce/: Responce.cpp  Responce.hpp
src/Server/: Server.cpp  Server.hpp
